// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schedule behavior with cron 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_ScheduleOnTickc5395e41_IamRole_D42951B2\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_Schedule_ScheduleScheduleRolec5395e41_62F32A36\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"sts:AssumeRole\\\\\\"],\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"scheduler.amazonaws.com\\\\\\"}}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicy_A7C7B01B\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      },
      \\"root_Schedule_ScheduleSchedulePolicyc5395e41_00999568\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"lambda:InvokeFunction\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.arn}\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Schedule_ScheduleScheduleRolec5395e41_62F32A36.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicyAttachment_4D7CDBC7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_ScheduleOnTickc5395e41_49F0E4B8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\"
          }
        },
        \\"function_name\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTickc5395e41_Code_C7AC6B0A.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_ScheduleOnTickc5395e41_S3Object_DE498BA0.key}\\",
        \\"timeout\\": 30
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_ScheduleOnTickc5395e41_Code_C7AC6B0A\\": {
        \\"bucket_prefix\\": \\"code-c88e84cc-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_ScheduleOnTickc5395e41_S3Object_DE498BA0\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTickc5395e41_Code_C7AC6B0A.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_scheduler_schedule\\": {
      \\"root_Schedule_ScheduleScheduleEventc5395e41_2DABECCC\\": {
        \\"flexible_time_window\\": {
          \\"mode\\": \\"OFF\\"
        },
        \\"schedule_expression\\": \\"cron(0/1 * ? * * *)\\",
        \\"target\\": {
          \\"arn\\": \\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.arn}\\",
          \\"role_arn\\": \\"\${aws_iam_role.root_Schedule_ScheduleScheduleRolec5395e41_62F32A36.arn}\\"
        }
      }
    }
  }
}"
`;

exports[`schedule behavior with cron 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "Handler": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "Schedule": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Schedule-ScheduleEvent-c5395e41": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.schedulerSchedule.SchedulerSchedule",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-ScheduleEvent-c5395e41",
                    "path": "root/Default/Schedule/Schedule-ScheduleEvent-c5395e41",
                  },
                  "Schedule-SchedulePolicy-c5395e41": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-SchedulePolicy-c5395e41",
                    "path": "root/Default/Schedule/Schedule-SchedulePolicy-c5395e41",
                  },
                  "Schedule-ScheduleRole-c5395e41": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-ScheduleRole-c5395e41",
                    "path": "root/Default/Schedule/Schedule-ScheduleRole-c5395e41",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler",
                    },
                    Object {
                      "direction": "outbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/WingLogger",
                    },
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Asset",
                  },
                  "Code": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.2",
                    },
                    "id": "Code",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Code",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-c5395e41/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-c5395e41",
                "path": "root/Default/Schedule-OnTick-c5395e41",
              },
              "Schedule-OnTickHandler-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "id": "Schedule-OnTickHandler-c5395e41",
                "path": "root/Default/Schedule-OnTickHandler-c5395e41",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`schedule behavior with rate 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_ScheduleOnTickc5395e41_IamRole_D42951B2\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_Schedule_ScheduleScheduleRolec5395e41_62F32A36\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"sts:AssumeRole\\\\\\"],\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"scheduler.amazonaws.com\\\\\\"}}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicy_A7C7B01B\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      },
      \\"root_Schedule_ScheduleSchedulePolicyc5395e41_00999568\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"lambda:InvokeFunction\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.arn}\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Schedule_ScheduleScheduleRolec5395e41_62F32A36.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicyAttachment_4D7CDBC7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_ScheduleOnTickc5395e41_49F0E4B8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\"
          }
        },
        \\"function_name\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTickc5395e41_Code_C7AC6B0A.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_ScheduleOnTickc5395e41_S3Object_DE498BA0.key}\\",
        \\"timeout\\": 30
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_ScheduleOnTickc5395e41_Code_C7AC6B0A\\": {
        \\"bucket_prefix\\": \\"code-c88e84cc-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_ScheduleOnTickc5395e41_S3Object_DE498BA0\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTickc5395e41_Code_C7AC6B0A.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_scheduler_schedule\\": {
      \\"root_Schedule_ScheduleScheduleEventc5395e41_2DABECCC\\": {
        \\"flexible_time_window\\": {
          \\"mode\\": \\"OFF\\"
        },
        \\"schedule_expression\\": \\"rate(2 minutes)\\",
        \\"target\\": {
          \\"arn\\": \\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.arn}\\",
          \\"role_arn\\": \\"\${aws_iam_role.root_Schedule_ScheduleScheduleRolec5395e41_62F32A36.arn}\\"
        }
      }
    }
  }
}"
`;

exports[`schedule behavior with rate 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "Handler": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "Schedule": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Schedule-ScheduleEvent-c5395e41": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.schedulerSchedule.SchedulerSchedule",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-ScheduleEvent-c5395e41",
                    "path": "root/Default/Schedule/Schedule-ScheduleEvent-c5395e41",
                  },
                  "Schedule-SchedulePolicy-c5395e41": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-SchedulePolicy-c5395e41",
                    "path": "root/Default/Schedule/Schedule-SchedulePolicy-c5395e41",
                  },
                  "Schedule-ScheduleRole-c5395e41": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-ScheduleRole-c5395e41",
                    "path": "root/Default/Schedule/Schedule-ScheduleRole-c5395e41",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler",
                    },
                    Object {
                      "direction": "outbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/WingLogger",
                    },
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Asset",
                  },
                  "Code": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.2",
                    },
                    "id": "Code",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Code",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-c5395e41/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-c5395e41",
                "path": "root/Default/Schedule-OnTick-c5395e41",
              },
              "Schedule-OnTickHandler-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "id": "Schedule-OnTickHandler-c5395e41",
                "path": "root/Default/Schedule-OnTickHandler-c5395e41",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`schedule with two functions 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_ScheduleOnTick0a615500_IamRole_CDDD9C52\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_ScheduleOnTick7b33bcba_IamRole_02FDC318\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_Schedule_ScheduleScheduleRole0a615500_8BB9F0F4\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"sts:AssumeRole\\\\\\"],\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"scheduler.amazonaws.com\\\\\\"}}]}\\"
      },
      \\"root_Schedule_ScheduleScheduleRole7b33bcba_5C7B08AB\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"sts:AssumeRole\\\\\\"],\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"scheduler.amazonaws.com\\\\\\"}}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_ScheduleOnTick0a615500_IamRolePolicy_3DA1DADC\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick0a615500_IamRole_CDDD9C52.name}\\"
      },
      \\"root_ScheduleOnTick7b33bcba_IamRolePolicy_DB491429\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick7b33bcba_IamRole_02FDC318.name}\\"
      },
      \\"root_Schedule_ScheduleSchedulePolicy0a615500_FFA78F15\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"lambda:InvokeFunction\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"\${aws_lambda_function.root_ScheduleOnTick0a615500_9EB460BE.arn}\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Schedule_ScheduleScheduleRole0a615500_8BB9F0F4.name}\\"
      },
      \\"root_Schedule_ScheduleSchedulePolicy7b33bcba_EDC9A1D8\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"lambda:InvokeFunction\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"\${aws_lambda_function.root_ScheduleOnTick7b33bcba_F513E6E2.arn}\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Schedule_ScheduleScheduleRole7b33bcba_5C7B08AB.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_ScheduleOnTick0a615500_IamRolePolicyAttachment_9B786B92\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick0a615500_IamRole_CDDD9C52.name}\\"
      },
      \\"root_ScheduleOnTick7b33bcba_IamRolePolicyAttachment_8D42B8DE\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick7b33bcba_IamRole_02FDC318.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_ScheduleOnTick0a615500_9EB460BE\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Schedule-OnTick-0a615500-c8fd8480\\"
          }
        },
        \\"function_name\\": \\"Schedule-OnTick-0a615500-c8fd8480\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick0a615500_IamRole_CDDD9C52.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTick0a615500_Code_12A9FE62.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_ScheduleOnTick0a615500_S3Object_EB395932.key}\\",
        \\"timeout\\": 30
      },
      \\"root_ScheduleOnTick7b33bcba_F513E6E2\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Schedule-OnTick-7b33bcba-c86000d7\\"
          }
        },
        \\"function_name\\": \\"Schedule-OnTick-7b33bcba-c86000d7\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick7b33bcba_IamRole_02FDC318.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTick7b33bcba_Code_4537EF5B.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_ScheduleOnTick7b33bcba_S3Object_4D569B28.key}\\",
        \\"timeout\\": 30
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_ScheduleOnTick0a615500_Code_12A9FE62\\": {
        \\"bucket_prefix\\": \\"code-c86b51ff-\\"
      },
      \\"root_ScheduleOnTick7b33bcba_Code_4537EF5B\\": {
        \\"bucket_prefix\\": \\"code-c8f7fd57-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_ScheduleOnTick0a615500_S3Object_EB395932\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTick0a615500_Code_12A9FE62.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"root_ScheduleOnTick7b33bcba_S3Object_4D569B28\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTick7b33bcba_Code_4537EF5B.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_scheduler_schedule\\": {
      \\"root_Schedule_ScheduleScheduleEvent0a615500_E01C2109\\": {
        \\"flexible_time_window\\": {
          \\"mode\\": \\"OFF\\"
        },
        \\"schedule_expression\\": \\"cron(0/1 * ? * * *)\\",
        \\"target\\": {
          \\"arn\\": \\"\${aws_lambda_function.root_ScheduleOnTick0a615500_9EB460BE.arn}\\",
          \\"role_arn\\": \\"\${aws_iam_role.root_Schedule_ScheduleScheduleRole0a615500_8BB9F0F4.arn}\\"
        }
      },
      \\"root_Schedule_ScheduleScheduleEvent7b33bcba_94CFF628\\": {
        \\"flexible_time_window\\": {
          \\"mode\\": \\"OFF\\"
        },
        \\"schedule_expression\\": \\"cron(0/1 * ? * * *)\\",
        \\"target\\": {
          \\"arn\\": \\"\${aws_lambda_function.root_ScheduleOnTick7b33bcba_F513E6E2.arn}\\",
          \\"role_arn\\": \\"\${aws_iam_role.root_Schedule_ScheduleScheduleRole7b33bcba_5C7B08AB.arn}\\"
        }
      }
    }
  }
}"
`;

exports[`schedule with two functions 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "Handler1": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Schedule-OnTick-7b33bcba",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler1",
                "path": "root/Default/Handler1",
              },
              "Handler2": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Schedule-OnTick-0a615500",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler2",
                "path": "root/Default/Handler2",
              },
              "Schedule": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule-OnTick-7b33bcba",
                    },
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule-OnTick-0a615500",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Schedule-ScheduleEvent-0a615500": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.schedulerSchedule.SchedulerSchedule",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-ScheduleEvent-0a615500",
                    "path": "root/Default/Schedule/Schedule-ScheduleEvent-0a615500",
                  },
                  "Schedule-ScheduleEvent-7b33bcba": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.schedulerSchedule.SchedulerSchedule",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-ScheduleEvent-7b33bcba",
                    "path": "root/Default/Schedule/Schedule-ScheduleEvent-7b33bcba",
                  },
                  "Schedule-SchedulePolicy-0a615500": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-SchedulePolicy-0a615500",
                    "path": "root/Default/Schedule/Schedule-SchedulePolicy-0a615500",
                  },
                  "Schedule-SchedulePolicy-7b33bcba": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-SchedulePolicy-7b33bcba",
                    "path": "root/Default/Schedule/Schedule-SchedulePolicy-7b33bcba",
                  },
                  "Schedule-ScheduleRole-0a615500": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-ScheduleRole-0a615500",
                    "path": "root/Default/Schedule/Schedule-ScheduleRole-0a615500",
                  },
                  "Schedule-ScheduleRole-7b33bcba": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "Schedule-ScheduleRole-7b33bcba",
                    "path": "root/Default/Schedule/Schedule-ScheduleRole-7b33bcba",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-0a615500": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler2",
                    },
                    Object {
                      "direction": "outbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/WingLogger",
                    },
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-0a615500/Asset",
                  },
                  "Code": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.2",
                    },
                    "id": "Code",
                    "path": "root/Default/Schedule-OnTick-0a615500/Code",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-0a615500/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-0a615500/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-0a615500/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-0a615500/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-0a615500/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-0a615500",
                "path": "root/Default/Schedule-OnTick-0a615500",
              },
              "Schedule-OnTick-7b33bcba": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler1",
                    },
                    Object {
                      "direction": "outbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/WingLogger",
                    },
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/Asset",
                  },
                  "Code": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.2",
                    },
                    "id": "Code",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/Code",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-7b33bcba",
                "path": "root/Default/Schedule-OnTick-7b33bcba",
              },
              "Schedule-OnTickHandler-0a615500": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "id": "Schedule-OnTickHandler-0a615500",
                "path": "root/Default/Schedule-OnTickHandler-0a615500",
              },
              "Schedule-OnTickHandler-7b33bcba": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "id": "Schedule-OnTickHandler-7b33bcba",
                "path": "root/Default/Schedule-OnTickHandler-7b33bcba",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/Schedule-OnTick-7b33bcba",
                    },
                    Object {
                      "direction": "inbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/Schedule-OnTick-0a615500",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
